[lworld] C1's EliminateFieldAccess optimization fails with "wrong types"

XMLWordPrintable

      # Internal Error (/oracle/valhalla/open/src/hotspot/share/c1/c1_GraphBuilder.cpp:643), pid=1684133, tid=1684149
      # assert(result->type()->tag() == load->type()->tag()) failed: wrong types

      Current CompileTask:
      C1: 989 602 b 3 compiler.valhalla.inlinetypes.TestGenerated::test6 (16 bytes)

      Stack: [0x00007fbb10735000,0x00007fbb10836000], sp=0x00007fbb10833cd0, free space=1019k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x75ce79] MemoryBuffer::load(LoadField*)+0x1c9
      V [libjvm.so+0x74dcfd] GraphBuilder::access_field(Bytecodes::Code)+0xccd
      V [libjvm.so+0x753b1b] GraphBuilder::iterate_bytecodes_for_block(int)+0x67b
      V [libjvm.so+0x755959] GraphBuilder::iterate_all_blocks(bool)+0x89
      V [libjvm.so+0x756b3f] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0x52f
      V [libjvm.so+0x7673b3] IR::IR(Compilation*, ciMethod*, int)+0x663
      V [libjvm.so+0x724921] Compilation::build_hir() [clone .part.0]+0x261
      V [libjvm.so+0x72933c] Compilation::compile_java_method()+0x1bc
      V [libjvm.so+0x72a157] Compilation::compile_method()+0x1d7
      V [libjvm.so+0x72abc6] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x3c6
      V [libjvm.so+0x72c043] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1a3
      V [libjvm.so+0xa61878] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
      V [libjvm.so+0xa623c8] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x198e6b6] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1995030] Thread::call_run()+0x100
      V [libjvm.so+0x164f996] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: