8260283: [lworld] C1's EliminateFieldAccess optimization fails with "wrong types"

Reviewed-by: fparain